# family_budget

./: .env.EXAMPLE  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 4244aa7ebdd9_initial_commit.py  bff248df0989_added_operations_model.py
family_budget/: app.py  main.py
family_budget/core/: config.py  const.py  database.py  deps.py  enums.py  exceptions.py  utils.py
family_budget/models/: __init__.py  base.py  budget.py  operation.py  user.py
family_budget/routers/v1/: __init__.py  auth.py  budget.py  healthcheck.py  operations.py  user.py
family_budget/schemas/v1/: auth.py  budget.py  user.py
family_budget/services/: budget.py  operation.py  user.py
tests/: conftest.py  const.py  init.sql  test_api.py  test_budget.py  test_operation.py  test_user.py
